--- a/Pphone.html
+++ b/Pphone.html
@@ -115,7 +115,7 @@
                 </div>
                 <div class="z-index">
                     <small>Popular</small>
-                    <h1>Ppad Pro</h1>
+                    <h1>Phoen-ix-Plus</h1>
                     <h3>New Design, <p></p>New Power.</h3>
                   <br>
                     <h5>Start at $799</h5>
